--- a/index.html
+++ b/index.html
@@ -4,9 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Facebook</title>
+    <!-- css link start-->
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <!-- css link ends-->
 </head>
 <body>
-    
+    <nav>
+        <div class="nav_left">
+            <img src="images/logo.png" alt="navLogo" class="logo">
+            <ul>
+                <li> <img src="images/notification.png" alt=""></li>
+                <li> <img src="images/inbox.png" alt=""></li>
+                <li> <img src="images/video.png" alt=""></li>
+            </ul>
+        </div>
+        <div class="nav_right">
+            <div class="search-box">
+                <img src="images/search.png" alt="">
+                <input type="search" placeholder="Search">
+            </div>
+            <div class="nav-user-icon online">
+                <img src="images/profile-pic.png" alt="">
+            </div>
+        </div>
+    </nav>
+
+
+    <div class="container">
+        <div class="left-sidebar">
+
+        </div>
+        <div class="main-content">
+
+        </div>
+        <div class="right-sidebar">
+
+        </div>
+    </div>
 </body>
 </html>
